# vmg2eml

./: .gitignore  vmg2eml.workspace
vmg2eml/: CMakeLists.txt  Makefile  libmbfl++.hpp  main.cpp  vmg2eml.project
